# marviz

./: .env.example  .gitignore  README.md  poc_concurrent_stream.py  poc_litellm_stream.py  pyproject.toml
src/marviz/: __init__.py  __main__.py  app.py  config.py
src/marviz/agents/: __init__.py  base.py  main_agent.py  sub_agent.py  types.py
src/marviz/providers/: base.py  litellm_provider.py
src/marviz/ui/: messages.py
src/marviz/ui/screens/: main_screen.py
src/marviz/ui/styles/: app.tcss
src/marviz/ui/widgets/: __init__.py  agent_container.py  agent_panel.py  chat_panel.py  code_editor.py  file_tree.py  fkey_bar.py  status_bar.py  terminal_panel.py  title_bar.py
